--- a/cbook.html
+++ b/cbook.html
@@ -7,6 +7,6 @@
 <body>
 <script>
 alert("本资源来自网络，书籍版权归版权方所有, 不得进行商业使用，如有侵权，请联系管理员删除，联系邮箱: ct@kemaixs.net");
-
+　　window.location.href="https://www.kemaixs.net/C%20Primer%20plus%20%E7%AC%AC%E4%BA%94%E7%89%88%EF%BC%88%E9%9D%9E%E6%89%AB%E6%8F%8F%E5%B8%A6%E4%B9%A6%E7%AD%BE%EF%BC%89.pdf";
 </body>
 </html>
